    many pages.
    <https://github.com/jhy/jsoup/issues/797>

  * Improvement: performance tweaks when parsing start tags, data, tables.

  * Improvement: added Element.nextElementSiblings() and Element.previousElementSiblings()
    <https://github.com/jhy/jsoup/pull/1054>

  * Improvement: treat center tags as block tags.
    <https://github.com/jhy/jsoup/pull/1113>

  * Bugfix: when using the tag case preserving parsing settings, certain HTML tree building rules where not followed
    for upper case tags.
    <https://github.com/jhy/jsoup/issues/1149>

  * Bugfix: when converting a Jsoup document to a W3C DOM, if an element is namespaced but not in a defined namespace,
    set it to the global namespace.
    <https://github.com/jhy/jsoup/issues/848>

  * Bugfix: attributes created with the Attribute constructor with just spaces for names would incorrectly pass
    validation.
    <https://github.com/jhy/jsoup/issues/1159>

  * Bugfix: some pseudo XML Declarations were incorrectly handled when using the XML Parser, leading to an IOOB
    exception when parsing.
    <https://github.com/jhy/jsoup/issues/1139>

  * Bugfix: when parsing URL parameter names in an attribute that is not correctly HTML encoded, and near the end of the
    current buffer, those parameters may be incorrectly dropped. (Improved CharacterReader mark/reset support.)
    <https://github.com/jhy/jsoup/pull/1154>

  * Bugfix: boolean attribute values would be returned as null, vs an empty string, when accessed via the
    Attribute#getValue() method.
    <https://github.com/jhy/jsoup/issues/1065>

  * Bugix: orphan Attribute objects (i.e. created outside of a parse or an Element) would throw an NPE on
    Attribute#setValue(val)
    <https://github.com/jhy/jsoup/issues/1107>

  * Updated jetty-server (which is used for integration tests) to latest 9.2 series (9.2.26.v20180806).

*** Release 1.11.3 [2018-Apr-15]